WIP: Updated readme, changing paths in config files, etc.

--- a/code/ClassifyEvents.ipynb
+++ b/code/ClassifyEvents.ipynb
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "BASEDIR = r\"X:\\georisk\\HaRIA_B_Wind\\data\\derived\\obs\\1-minute\\events\"\n",
-    "hqstations = pd.read_csv(os.path.join(BASEDIR, \"hqstations.csv\"), index_col=\"stnNum\")\n",
+    "hqstations = pd.read_csv(\"..\\data\\hqstations.csv\", index_col=\"stnNum\")\n",
     "options = [(stnName, idx) for idx, stnName in hqstations['stnName'].items()]\n",
     "out = widgets.Output()"
    ]
@@ -87,17 +87,23 @@
     "def plotEvent(pdf, fig):\n",
     "    fig.clear()\n",
     "    ax = fig.add_axes([0, 0, 1, 1])\n",
+    "    ax.set_zorder(1)\n",
+    "    ax.patch.set_visible(False)\n",
     "    ax2 = ax.twinx()\n",
     "    axt = ax.twinx()\n",
     "    axp = ax.twinx()\n",
     "    axr = ax.twinx()\n",
     "    \n",
-    "    pdf.plot.line(x='tdiff', y='windgust', marker='o', ax=ax)\n",
+    "    pdf.plot.line(x='tdiff', y='windgust', marker='o', ax=ax, lw=2,\n",
+    "                  markerfacecolor=\"None\")\n",
     "    pdf.plot.line(x='tdiff', y='windspd', marker='o', ax=ax, color='0.5')\n",
     "    pdf.plot.scatter(x='tdiff', y='winddir', ax=ax2, color='g', marker='o',)\n",
-    "    pdf.plot.line(x='tdiff', y='tempanom', color='r', ax=axt)\n",
-    "    pdf.plot.line(x='tdiff', y='dpanom', color='orangered', ax=axt)\n",
-    "    pdf.plot.line(x='tdiff', y='stnpanom', color='purple', ax=axp)\n",
+    "    pdf.plot.line(x='tdiff', y='tempanom', color='r', ax=axt, marker='^',\n",
+    "                  markerfacecolor=\"None\", markevery=5)\n",
+    "    pdf.plot.line(x='tdiff', y='dpanom', color='orangered', ax=axt,\n",
+    "                  marker='.', markerfacecolor=\"None\", markevery=5)\n",
+    "    pdf.plot.line(x='tdiff', y='stnpanom', color='purple', lw=2, ax=axp,\n",
+    "                  ls='--')\n",
     "    pdf.plot.line(x='tdiff', y='rh', color='lime', ax=axr)\n",
     "    \n",
     "    axt.spines['right'].set_position((\"axes\", 1.075))\n",
@@ -343,7 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(eventlist, columns=['stnNum', 'date', 'stormType']).to_csv(r\"X:\\georisk\\HaRIA_B_Wind\\data\\derived\\obs\\1-minute\\events\\CA_20230518_Yarrawonga.csv\")"
+    "pd.DataFrame(eventlist, columns=['stnNum', 'date', 'stormType']).to_csv(r\"..\\output\\visual_storm_types.csv\")"
    ]
   }
  ],
