WIP: Provenance tracking code

--- a/code/ClassifyEvents.ipynb
+++ b/code/ClassifyEvents.ipynb
@@ -35,12 +35,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosave disabled\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
-    "\n",
+    "%autosave 0\n",
     "import os\n",
     "import time\n",
     "from functools import partial\n",
@@ -61,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,13 +253,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca84fe311f6a4a2a85e7986112f907ae",
+       "model_id": "59484547ded54878b491f7cd80b4d559",
        "version_major": 2,
        "version_minor": 0
       },
@@ -270,18 +287,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d5ed822c4a24ed586f38f61494d4aa4",
+       "model_id": "3e771de90f2d4a52a81fbd6bb2465d79",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ToggleButtons(description='Storm type', layout=Layout(width='auto'), options=('Unclassified', 'Spike', 'Synopt…"
+       "ToggleButtons(description='Storm type', index=5, layout=Layout(width='auto'), options=('Unclassified', 'Spike'…"
       ]
      },
      "metadata": {},
@@ -290,7 +307,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c08fc8e3b8d5487c840f2f9e5368b2b5",
+       "model_id": "bfa8318ff9e34171b53882cb5845a0d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -304,7 +321,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58eb13c5f02a47f3ae32a319a78a617c",
+       "model_id": "6ddb483020264032a92c3ea3ccca6142",
        "version_major": 2,
        "version_minor": 0
       },
@@ -312,7 +329,7 @@
        "Output()"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,11 +362,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(eventlist, columns=['stnNum', 'date', 'stormType']).to_csv(r\"..\\output\\visual_storm_types.csv\")"
+    "outdf = pd.DataFrame(eventlist, columns=['stnNum', 'date', 'stormType'])\n",
+    "outdf.drop_duplicates(keep='last', inplace=True, ignore_index=True)\n",
+    "outdf.to_csv(r\"..\\data\\training\\visual_storm_types.csv\")"
    ]
   }
  ],
